Updated some more layout issues and added more styles.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("./assets/weather-icons/css/weather-icons.min.css");
 @import url("./styles/Loader.css");
 @import url("./styles/Featured.css");
+@import url("./styles/Current.css");
 
 html,
 body,
@@ -17,6 +18,7 @@ body,
 	justify-content: end;
 	align-items: center;
 	width: 100vw;
+	padding: 10px;
 }
 
 .searchContainer {
@@ -29,18 +31,27 @@ body,
 	width: 40px;
 	height: 40px;
 	border: 1px solid black;
-  font-size: 1.5rem;
-  cursor: pointer;
-  outline: none;
+	font-size: 1.5rem;
+	cursor: pointer;
+	outline: none;
 	border-bottom-right-radius: 20px;
 	border-top-right-radius: 20px;
 }
 
 .submitBtn:hover {
-  color: white;
-  background-color: black;
+	color: white;
+	background-color: black;
 }
 
 .weatherData {
 	width: 100vw;
+}
+
+.left {
+	height: 100%;
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
