--- a/src/styles/Featured.css
+++ b/src/styles/Featured.css
@@ -11,16 +11,14 @@
 }
 
 .featuredCities {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 375px) {
   .featuredCities {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: 1fr;
   }
 }
