--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -126,7 +126,7 @@
 	height: 200px;
 	width: 180px;
 	padding: 10px;
-	background-color: white;
+	background-color: transparent;
 	z-index: 500;
 }
 
